# TmxMapLib

./: .gitignore  CMakeLists.txt  readme.md
Assets/: map01.tmx  tileset.readme  tileset.tsx
TmxMapLib/: CMakeLists.txt
TmxMapLib/Include/TmxMapLib/: Animation.h  Exceptions.h  Frame.h  GidUtil.h  Image.h  ImageLayer.h  LayerBase.h  Map.h  Object.h  ObjectGroup.h  Point.h  Property.h  PropertySet.h  Tile.h  TileLayer.h  Tileset.h  TilesetTile.h  TmxMap.h  XmlUtil.h
TmxMapLib/Source/: Animation.cpp  CMakeLists.txt  Frame.cpp  Image.cpp  ImageLayer.cpp  LayerBase.cpp  Map.cpp  Object.cpp  ObjectGroup.cpp  Property.cpp  PropertySet.cpp  Tile.cpp  TileLayer.cpp  Tileset.cpp  TilesetTile.cpp  TmxMap.cpp  XmlUtil.cpp
TmxMapLib/include/TmxMapLib/: Exceptions.h  Frame.h  GidUtil.h  Image.h  LayerBase.h  Map.h  Object.h  Point.h  Property.h  PropertySet.h  TileLayer.h  Tileset.h  XmlUtil.h
TmxMapLib/src/: Animation.cpp  Frame.cpp  Map.cpp  Object.cpp  ObjectGroup.cpp  Tileset.cpp  XmlUtil.cpp
TmxMapLib_Example/: CMakeLists.txt
TmxMapLib_Example/Source/: Property_Example.cpp  Tile_Example.cpp
TmxMapLib_Tests/: CMakeLists.txt
TmxMapLib_Tests/Source/: CMakeLists.txt  Tests_Map.cpp  Tests_Property.cpp
TmxMapLib_Tests/src/: Tests_Map.cpp
